syntax = "proto3";

option go_package = "./stubs/auth";

import "google/protobuf/wrappers.proto";

message UserInfo {
    google.protobuf.StringValue email = 1;
    google.protobuf.StringValue uid = 2;
    google.protobuf.BoolValue emailVerified = 3;
    google.protobuf.StringValue displayName = 4;
    google.protobuf.StringValue password = 5;
    google.protobuf.BoolValue disabled = 6;
    google.protobuf.StringValue phoneNumber = 7;
    google.protobuf.StringValue photoUrl = 8;
}
