syntax = "proto3";

option go_package = "./stubs/auth";
      
import "auth/claim_base.proto";

message ClaimsRequest
{
    string uid = 1;
    repeated ClaimBase claims = 2;
}
