syntax = "proto3";
    
package squarealfa.nozard.techlog;
    
option go_package = "./stubs";
    

    
service GRecipeService
{
  rpc Create (GRecipe) returns (GRecipe);
  rpc Update (GRecipe) returns (GRecipe);
  rpc Delete (GKey) returns (G_GRecipeService_Delete_Return);
  rpc Get (GKey) returns (GRecipe);
  rpc Search (G_GRecipeService_Search_Parameters) returns (GListOfRecipe);
  rpc SearchNullable (G_GRecipeService_SearchNullable_Parameters) returns (G_GRecipeService_SearchNullable_Return);
  rpc InsertMany (GListOfRecipe) returns (G_GRecipeService_InsertMany_Return);
  rpc GetNullable (G_GRecipeService_GetNullable_Parameters) returns (G_GRecipeService_GetNullable_Return);
  rpc Count (G_GRecipeService_Count_Parameters) returns (G_GRecipeService_Count_Return);
  rpc CountNullable (G_GRecipeService_CountNullable_Parameters) returns (G_GRecipeService_CountNullable_Return);
  rpc Reindex (G_GRecipeService_Reindex_Parameters) returns (G_GRecipeService_Reindex_Return);
  rpc GetMainRecipeType (G_GRecipeService_GetMainRecipeType_Parameters) returns (G_GRecipeService_GetMainRecipeType_Return);
  rpc GetMainRecipeTypeNullable (G_GRecipeService_GetMainRecipeTypeNullable_Parameters) returns (G_GRecipeService_GetMainRecipeTypeNullable_Return);
  rpc GetRecipeTypeList (G_GRecipeService_GetRecipeTypeList_Parameters) returns (G_GRecipeService_GetRecipeTypeList_Return);
  rpc GetRecipeTypeListNullable (G_GRecipeService_GetRecipeTypeListNullable_Parameters) returns (G_GRecipeService_GetRecipeTypeListNullable_Return);
  rpc GetListOfInts (G_GRecipeService_GetListOfInts_Parameters) returns (G_GRecipeService_GetListOfInts_Return);
  rpc GetListOfIntsNullable (G_GRecipeService_GetListOfIntsNullable_Parameters) returns (G_GRecipeService_GetListOfIntsNullable_Return);
  rpc SearchRecipeStream (G_GRecipeService_SearchRecipeStream_Parameters) returns (stream GRecipe);
  rpc ReceiveStream (stream GRecipe) returns (G_GRecipeService_ReceiveStream_Return);
  rpc ServeBidiStream (stream GRecipe) returns (stream GCategory);
  rpc ReceiveLotsOfArgs (G_GRecipeService_ReceiveLotsOfArgs_Parameters) returns (G_GRecipeService_ReceiveLotsOfArgs_Return);
  rpc ReceiveLotsOfNullableArgs (G_GRecipeService_ReceiveLotsOfNullableArgs_Parameters) returns (G_GRecipeService_ReceiveLotsOfNullableArgs_Return);
} 
    


message Int32Value { int32 value = 1; }
message Timestamp { 
  int64 seconds = 1; 
  int32 nanos = 2;
}
message Duration { 
  int64 seconds = 1; 
  int32 nanos = 2;
}
message BoolValue { bool value = 1; }
message StringValue { string value = 1; }
    


  
message GCalcParameters
{

  int32 parameter1 = 2;
  int32 parameter2 = 1;
  Int32Value parameter3 = 3;
  int32 parameter5 = 9;

}   

message GListOfCalcParameters
{
  repeated GCalcParameters items = 1;
}
    


  
message GCalcResult
{


}   

message GListOfCalcResult
{
  repeated GCalcResult items = 1;
}
    


  
message GCategory
{


}   

message GListOfCategory
{
  repeated GCategory items = 1;
}
    


  
message GComponent
{


}   

message GListOfComponent
{
  repeated GComponent items = 1;
}
    


  
message GConstructObject1
{


}   

message GListOfConstructObject1
{
  repeated GConstructObject1 items = 1;
}
    


  
message GConstructObject2
{


}   

message GListOfConstructObject2
{
  repeated GConstructObject2 items = 1;
}
    


  
message GConstructObject3
{


}   

message GListOfConstructObject3
{
  repeated GConstructObject3 items = 1;
}
    


  
message GConstructObject4
{


}   

message GListOfConstructObject4
{
  repeated GConstructObject4 items = 1;
}
    


  
message GConstructObject5
{


}   

message GListOfConstructObject5
{
  repeated GConstructObject5 items = 1;
}
    


  
message GConstructObject6
{


}   

message GListOfConstructObject6
{
  repeated GConstructObject6 items = 1;
}
    


  
message GConstructObject7
{


}   

message GListOfConstructObject7
{
  repeated GConstructObject7 items = 1;
}
    


  
message GConstructObject8
{


}   

message GListOfConstructObject8
{
  repeated GConstructObject8 items = 1;
}
    


  
message GEmpty
{


}   

message GListOfEmpty
{
  repeated GEmpty items = 1;
}
    


  
message GEncapsulatedFieldsClass
{

  string finalString = 1;

}   

message GListOfEncapsulatedFieldsClass
{
  repeated GEncapsulatedFieldsClass items = 1;
}
    


  
message GIngredient
{


}   

message GListOfIngredient
{
  repeated GIngredient items = 1;
}
    


  
message GKey
{


}   

message GListOfKey
{
  repeated GKey items = 1;
}
    


  
message GListsHost
{


}   

message GListOfListsHost
{
  repeated GListsHost items = 1;
}
    


  
message GAirplane
{
  GFieldsOfAircraft fieldsOfSuperClass = 1;

  int32 wingspan = 2;

}   

message GListOfAirplane
{
  repeated GAirplane items = 1;
}
    


  
message GBalloon
{


}   

message GListOfBalloon
{
  repeated GBalloon items = 1;
}
    


  
message GBicycle
{
  GFieldsOfAbstractVehicle fieldsOfSuperClass = 1;

  bytes wheelDiamater = 2;

}   

message GListOfBicycle
{
  repeated GBicycle items = 1;
}
    


  
message GCar
{
  GFieldsOfVehicle fieldsOfSuperClass = 1;

  int32 numberOfDoors = 2;

}   

message GListOfCar
{
  repeated GCar items = 1;
}
    


  
message GEntity
{


}   

message GListOfEntity
{
  repeated GEntity items = 1;
}
    


  
message GGyrocopter
{
  GFieldsOfRotorcraft fieldsOfSuperClass = 1;


}   

message GListOfGyrocopter
{
  repeated GGyrocopter items = 1;
}
    


  
message GHelicopter
{
  GFieldsOfRotorcraft fieldsOfSuperClass = 1;


}   

message GListOfHelicopter
{
  repeated GHelicopter items = 1;
}
    


  
message GScooter
{
  GFieldsOfAbstractVehicle fieldsOfSuperClass = 1;


}   

message GListOfScooter
{
  repeated GScooter items = 1;
}
    

message GFieldsOfAbstractVehicle
{


}
    
  
message GAbstractVehicle
{
  oneof props {
    GFieldsOfAbstractVehicle abstract_vehicle = 1;

    GBicycle bicycle = 3;
    GScooter scooter = 4;

  }
    
}   

message GListOfAbstractVehicle
{
  repeated GAbstractVehicle items = 1;
}
    

message GFieldsOfAircraft
{
  GFieldsOfVehicle fieldsOfSuperClass = 6;

  int32 serviceCeiling = 3;

}
    
  
message GAircraft
{
  oneof props {
    GFieldsOfAircraft aircraft = 1;

    GAirplane airplane = 3;
    GRotorcraft rotorcraft = 4;
    GBalloon balloon = 5;

  }
    
}   

message GListOfAircraft
{
  repeated GAircraft items = 1;
}
    

message GFieldsOfRotorcraft
{
  GFieldsOfAircraft fieldsOfSuperClass = 1;


}
    
  
message GRotorcraft
{
  oneof props {
    GFieldsOfRotorcraft rotorcraft = 1;

    GHelicopter helicopter = 3;
    GGyrocopter gyrocopter = 4;

  }
    
}   

message GListOfRotorcraft
{
  repeated GRotorcraft items = 1;
}
    

message GFieldsOfVehicle
{


}
    
  
message GVehicle
{
  oneof props {
    GFieldsOfVehicle vehicle = 1;

    GAircraft aircraft = 3;
    GCar car = 4;

  }
    
}   

message GListOfVehicle
{
  repeated GVehicle items = 1;
}
    


  
message GKnife
{

  string name = 1;
  GKnifeType type = 2;

}   

message GListOfKnife
{
  repeated GKnife items = 1;
}
    


  
message GGarlicPress
{


}   

message GListOfGarlicPress
{
  repeated GGarlicPress items = 1;
}
    


  
message GKitchen
{


}   

message GListOfKitchen
{
  repeated GKitchen items = 1;
}
    


  
message GChef
{

  GRecipe favoriteRecipe = 2;
  GKnife favoriteKnife = 3;
  GApplianceType favoriteApplianceType = 4;
  repeated string favoriteWords = 5;
  Duration birthdate = 6;
  Duration shelfLife = 7;

}   

message GListOfChef
{
  repeated GChef items = 1;
}
    


  
message GSousChef
{
  GChef fieldsOfSuperClass = 1;


}   

message GListOfSousChef
{
  repeated GSousChef items = 1;
}
    


  
message GKnifeMaster
{
  GChef fieldsOfSuperClass = 1;

  GKnife favoriteKnife = 2;

}   

message GListOfKnifeMaster
{
  repeated GKnifeMaster items = 1;
}
    


  
message GInventory
{


}   

message GListOfInventory
{
  repeated GInventory items = 1;
}
    


  
message GPrecisionSubject
{


}   

message GListOfPrecisionSubject
{
  repeated GPrecisionSubject items = 1;
}
    


  
message GRecipe
{


}   

message GListOfRecipe
{
  repeated GRecipe items = 1;
}
    


  
message GStarship
{


}   

message GListOfStarship
{
  repeated GStarship items = 1;
}
    


  
message GPerson
{

  BoolValue boolValue = 1;
  bytes decVal = 2;

}   

message GListOfPerson
{
  repeated GPerson items = 1;
}
    


  
message GAbstractParentClass1
{


}   

message GListOfAbstractParentClass1
{
  repeated GAbstractParentClass1 items = 1;
}
    

message GFieldsOfAbstractParentClass2
{


}
    
  
message GAbstractParentClass2
{
  oneof props {
    GFieldsOfAbstractParentClass2 abstract_parent_class2 = 1;

    GSubClass1 sub_class1 = 3;

  }
    
}   

message GListOfAbstractParentClass2
{
  repeated GAbstractParentClass2 items = 1;
}
    


  
message GSubClass1
{
  GFieldsOfAbstractParentClass2 fieldsOfSuperClass = 1;


}   

message GListOfSubClass1
{
  repeated GSubClass1 items = 1;
}
    

message GFieldsOfScheduleConstraint
{


}
    
  
message GScheduleConstraint
{
  oneof props {
    GFieldsOfScheduleConstraint schedule_constraint = 1;

    GContestConstraint contest_constraint = 3;

  }
    
}   

message GListOfScheduleConstraint
{
  repeated GScheduleConstraint items = 1;
}
    


  
message GConstraintAdded
{


}   

message GListOfConstraintAdded
{
  repeated GConstraintAdded items = 1;
}
    


  
message GContestConstraint
{
  GFieldsOfScheduleConstraint fieldsOfSuperClass = 1;


}   

message GListOfContestConstraint
{
  repeated GContestConstraint items = 1;
}
    

message GFieldsOfBranch
{


}
    
  
message GBranch
{
  oneof props {
    GFieldsOfBranch branch = 1;

    GTwig twig = 3;

  }
    
}   

message GListOfBranch
{
  repeated GBranch items = 1;
}
    

message GFieldsOfTwig
{
  GFieldsOfBranch fieldsOfSuperClass = 1;


}
    
  
message GTwig
{
  oneof props {
    GFieldsOfTwig twig = 1;

    GLeaf leaf = 3;

  }
    
}   

message GListOfTwig
{
  repeated GTwig items = 1;
}
    


  
message GLeaf
{
  GFieldsOfTwig fieldsOfSuperClass = 1;


}   

message GListOfLeaf
{
  repeated GLeaf items = 1;
}
    
        
enum GApplianceType {
  heat = 0;
  cold = 1;
  cutlery = 2;
}   

message GApplianceType_Message {
  GApplianceType value = 1;
}
     

        
enum GRecipeTypes {
  cook = 0;
  grill = 1;
  fry = 2;
  stew = 3;
}   

message GRecipeTypes_Message {
  GRecipeTypes value = 1;
}
     

        
enum GKnifeType {
  chefsKnife = 0;
  paringKnife = 1;
  breadKnife = 2;
}   

message GKnifeType_Message {
  GKnifeType value = 1;
}
     

        
enum GChefType {
  seniorChef = 0;
  sousChef = 1;
  pastryChef = 2;
  fishChef = 3;
}   

message GChefType_Message {
  GChefType value = 1;
}
     

message G_GRecipeService_Delete_Return {
}

message G_GRecipeService_Search_Parameters {
}

message G_GRecipeService_SearchNullable_Parameters {
}

message G_GRecipeService_SearchNullable_Return {
  repeated GRecipe value = 1;
}

message G_GRecipeService_InsertMany_Return {
}

message G_GRecipeService_GetNullable_Parameters {
}

message G_GRecipeService_GetNullable_Return {
  GRecipe value = 1;
}

message G_GRecipeService_Count_Parameters {
}

message G_GRecipeService_Count_Return {
  int32 value = 1;
}

message G_GRecipeService_CountNullable_Parameters {
  bool returnNull = 1;
}

message G_GRecipeService_CountNullable_Return {
  Int32Value value = 1;
}

message G_GRecipeService_Reindex_Parameters {
}

message G_GRecipeService_Reindex_Return {
}

message G_GRecipeService_GetMainRecipeType_Parameters {
}

message G_GRecipeService_GetMainRecipeType_Return {
  GRecipeTypes value = 1;
}

message G_GRecipeService_GetMainRecipeTypeNullable_Parameters {
}

message G_GRecipeService_GetMainRecipeTypeNullable_Return {
  GRecipeTypes_Message value = 1;
}

message G_GRecipeService_GetRecipeTypeList_Parameters {
}

message G_GRecipeService_GetRecipeTypeList_Return {
  repeated GRecipeTypes value = 1;
}

message G_GRecipeService_GetRecipeTypeListNullable_Parameters {
}

message G_GRecipeService_GetRecipeTypeListNullable_Return {
  repeated GRecipeTypes value = 1;
}

message G_GRecipeService_GetListOfInts_Parameters {
}

message G_GRecipeService_GetListOfInts_Return {
  repeated int32 value = 1;
}

message G_GRecipeService_GetListOfIntsNullable_Parameters {
}

message G_GRecipeService_GetListOfIntsNullable_Return {
  repeated int32 value = 1;
}

message G_GRecipeService_SearchRecipeStream_Parameters {
}

message G_GRecipeService_ReceiveStream_Return {
}

message G_GRecipeService_ReceiveLotsOfArgs_Parameters {
  string pString = 1;
  int32 pInt = 2;
  GRecipeTypes pRecipeTypes = 3;
  GRecipe pRecipe = 4;
  repeated string pListStrings = 5;
  repeated int32 pListInts = 6;
  repeated GRecipeTypes pListRecipeTypes = 7;
  repeated GRecipe pListRecipes = 8;
  repeated string pSetString = 9;
  repeated int32 pSetInt = 10;
  repeated GRecipeTypes pSetRecipeTypes = 11;
  repeated GRecipe pSetRecipe = 12;
  repeated string pIterableString = 13;
  repeated int32 pIterableInt = 14;
  repeated GRecipeTypes pIterableRecipeTypes = 15;
  repeated GRecipe pIterableRecipe = 16;
}

message G_GRecipeService_ReceiveLotsOfArgs_Return {
}

message G_GRecipeService_ReceiveLotsOfNullableArgs_Parameters {
  StringValue pString = 1;
  Int32Value pInt = 2;
  GRecipeTypes_Message pRecipeTypes = 3;
  GRecipe pRecipe = 4;
  repeated string pListStrings = 5;
  repeated int32 pListInts = 6;
  repeated GRecipeTypes pListRecipeTypes = 7;
  repeated GRecipe pListRecipes = 8;
  repeated string pSetString = 9;
  repeated int32 pSetInt = 10;
  repeated GRecipeTypes pSetRecipeTypes = 11;
  repeated GRecipe pSetRecipe = 12;
  repeated string pIterableString = 13;
  repeated int32 pIterableInt = 14;
  repeated GRecipeTypes pIterableRecipeTypes = 15;
  repeated GRecipe pIterableRecipe = 16;
}

message G_GRecipeService_ReceiveLotsOfNullableArgs_Return {
  repeated int32 value = 1;
}
